--- a/CaseHub/res/layout/fragment_laundry.xml
+++ b/CaseHub/res/layout/fragment_laundry.xml
@@ -1,7 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="0dp" >
 
-</GridView>
+    <LinearLayout
+        android:id="@+id/house_selector_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp"
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+        
+    </LinearLayout>
+    
+    <ScrollView
+        android:id="@+id/laundry_scroll"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/house_selector_layout"
+        android:fadingEdge="none"
+        android:overScrollMode="never"
+        android:padding="0dp"
+        android:scrollbars="none" >
+        
+        
+        
+    </ScrollView>
+
+</RelativeLayout>
