--- a/CaseHub/res/layout/fragment_laundry.xml
+++ b/CaseHub/res/layout/fragment_laundry.xml
@@ -17,8 +17,9 @@
 
         <Spinner
             android:id="@+id/house_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
         
     </LinearLayout>
     
