--- a/CaseHub/res/layout/fragment_laundry.xml
+++ b/CaseHub/res/layout/fragment_laundry.xml
@@ -20,9 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical" />
-        
     </LinearLayout>
-    
+
     <ScrollView
         android:id="@+id/laundry_scroll"
         android:layout_width="match_parent"
@@ -33,9 +32,13 @@
         android:overScrollMode="never"
         android:padding="0dp"
         android:scrollbars="none" >
-        
-        
-        
+
+        <LinearLayout
+            android:id="@+id/laundry_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
