--- a/CaseHub/res/layout/fragment_dining.xml
+++ b/CaseHub/res/layout/fragment_dining.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frame"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
     
-	<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-	</android.support.v4.view.ViewPager>
+	<ListView android:id="@+id/diningListView"
+	    android:layout_height="match_parent"
+	    android:layout_width="match_parent"/>
 
 </FrameLayout>
