--- a/CaseHub/res/layout/fragment_dining_page.xml
+++ b/CaseHub/res/layout/fragment_dining_page.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/expandableListView1"
+    android:id="@+id/pageList"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
