--- a/CaseHub/res/layout/fragment_laundry.xml
+++ b/CaseHub/res/layout/fragment_laundry.xml
@@ -1,56 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/laundry_scroll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="0dp" >
+    android:layout_height="fill_parent" >
 
     <LinearLayout
-        android:id="@+id/house_selector_layout"
+        android:id="@+id/laundry_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:baselineAligned="false"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
-        <Spinner
-            android:id="@+id/house_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical" />
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/laundry_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/house_selector_layout"
-        android:fadingEdge="none"
-        android:overScrollMode="never"
-        android:padding="0dp"
-        android:scrollbars="none" ><LinearLayout
-            android:id="@+id/laundry_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <LinearLayout
-                android:id="@+id/test_item"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/thursday_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/thursday" />
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+</ScrollView>
