--- a/CaseHub/res/menu/laundry.xml
+++ b/CaseHub/res/menu/laundry.xml
@@ -6,5 +6,9 @@
         android:id="@+id/laundry_spinner"
         android:actionViewClass="android.widget.Spinner"
         android:showAsAction="always"/>
+    
+    <item android:id="@+id/refresh_houses"
+          android:title="@string/refresh_houses"
+          android:showAsAction="never" />
 
 </menu>
