--- a/CaseHub/res/layout/fragment_campusmap.xml
+++ b/CaseHub/res/layout/fragment_campusmap.xml
@@ -3,5 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
+       <fragment
+        android:id="@+id/casemap"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"/>    
 
 </FrameLayout>
