--- a/CaseHub/res/layout/template_laundry_button.xml
+++ b/CaseHub/res/layout/template_laundry_button.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/laundry_button"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:padding="10dp" >
 
@@ -17,12 +17,15 @@
         android:id="@+id/laundry_machine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/laundry_icon"
         android:gravity="center_vertical" />
 
     <TextView
         android:id="@+id/laundry_machine_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true" />
 
 </RelativeLayout>
