--- a/CaseHub/res/layout/dialog_laundry_alarm.xml
+++ b/CaseHub/res/layout/dialog_laundry_alarm.xml
@@ -3,5 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
+    
+    <TextView
+        android:id="@+id/laundry_dialog_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="16dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
