--- a/CaseHub/res/layout/template_event_layout.xml
+++ b/CaseHub/res/layout/template_event_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/event_layout"
     android:tag="event_layout"
+    android:clickable="true"
     style="@style/ScheduleEvent" >
 
     <TextView
